Fixed rotate on iOS

--- a/docs/static/style.css
+++ b/docs/static/style.css
@@ -5,7 +5,7 @@
   src: url('HeroesSans-Regular.woff') format('woff');
 }
 
-body { margin: 0; }
+body { margin: 0; background: #6BBF40; }
 
 canvas {
   image-rendering: crisp-edges;
